<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarkerActivity"
    android:fitsSystemWindows="true"
    android:background="@color/background">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonAttach"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AddMarkerOnMapTitle"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/AddMarkerOnMapTitleHint"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp" />

            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/AddMarkerOnMapMessageHint"
                app:layout_constraintTop_toBottomOf="@id/editText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"/>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/AddMarkerOnMapYourNameHint"
                app:layout_constraintTop_toBottomOf="@id/editTextMessage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"/>

            <TextView
                android:id="@+id/textViewAttachedImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AddMarkerOnMapImageHint"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/editTextName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/UploadedImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/circular"
                app:layout_constraintTop_toBottomOf="@id/textViewAttachedImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:srcCompat="@drawable/image_placeholder" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/buttonAttach"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/yellow"
        android:src="@drawable/attach_photo_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/AttachImageButtonDescription" />

    <ProgressBar
        android:id="@+id/UploadProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDone"
        android:visibility="gone"/>

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:text="@string/DoneButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        android:text="@string/CancelButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>